add more sections and organize

--- a/draft/_toc.yml
+++ b/draft/_toc.yml
@@ -23,3 +23,8 @@ parts:
   - caption: Mindset & Attitude
     chapters:
     - file: chapters/mindsetattitude/sayno
+
+  - caption: Perspectives
+    chapters:
+    - file: chapters/perspectives/difficultpeople
+    - file: chapters/perspectives/siliconvalleyroots
