--- a/draft/_toc.yml
+++ b/draft/_toc.yml
@@ -1,6 +1,5 @@
-# Learn more at https://jupyterbook.org/customize/toc.html
 format: jb-book
-root: cover
+root: cover.md
 parts:
   - caption: Foreword
     chapters:
