A few more sections

--- a/draft/_toc.yml
+++ b/draft/_toc.yml
@@ -68,4 +68,5 @@ parts:
 
   - caption: Conclusion
     chapters:
+    - file: chapters/conclusion/recap
     - file: chapters/conclusion/conclusion
