--- a/astudentsguide/_config.yml
+++ b/astudentsguide/_config.yml
@@ -1,6 +1,6 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Succeeding in CS
+title: A Student's Guide to CS
 author: Ethan Richards
 logo: logo.png
 
