--- a/.github/workflows/deploybook.yaml
+++ b/.github/workflows/deploybook.yaml
@@ -1,17 +1,12 @@
 name: deploy-book
 
-# Run this when the master or main branch changes
 on:
   push:
     branches:
     - master
     - main
-    # If your git repository has the Jupyter Book within some-subfolder next to
-    # unrelated files, you can make this run only if a file within that specific
-    # folder has been modified.
-    #
-    # paths:
-    # - some-subfolder/**
+    paths:
+    - astudentsguide/**
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
