--- a/.github/workflows/deploybook.yaml
+++ b/.github/workflows/deploybook.yaml
@@ -3,12 +3,8 @@ name: deploy-book
 on:
   push:
     branches:
-    - master
     - main
-    paths:
-    - astudentsguide/**
 
-# This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
   deploy-book:
     runs-on: ubuntu-latest
@@ -28,20 +24,10 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    # (optional) Cache your executed notebooks between runs
-    # if you have config:
-    # execute:
-    #   execute_notebooks: cache
-    - name: cache executed notebooks
-      uses: actions/cache@v3
-      with:
-        path: _build/.jupyter_cache
-        key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
-
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build .
+        jupyter-book build astudentsguide
 
     # Upload the book's HTML as an artifact
     - name: Upload artifact
