--- a/.github/workflows/deploybook.yaml
+++ b/.github/workflows/deploybook.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
       with:
-        path: "_build/html"
+        path: "astudentsguide/_build/html"
 
     # Deploy the book's HTML to GitHub Pages
     - name: Deploy to GitHub Pages
