--- a/.github/workflows/deploybook.yaml
+++ b/.github/workflows/deploybook.yaml
@@ -33,7 +33,7 @@ jobs:
 
     # Upload the book's HTML as an artifact
     - name: Upload artifact
-      uses: actions/upload-pages-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         path: "astudentsguide/_build/html"
         overwrite: true
