Fix deploy again

--- a/.github/workflows/deploybook.yaml
+++ b/.github/workflows/deploybook.yaml
@@ -35,8 +35,18 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
+        name: "test"
         path: "astudentsguide/_build/html"
         overwrite: true
+
+    # - name: Upload artifact
+    #   id: upload-artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: ${{ inputs.name }}
+    #     path: ${{ runner.temp }}/artifact.tar
+    #     retention-days: ${{ inputs.retention-days }}
+    #     if-no-files-found: error
 
     # Deploy the book's HTML to GitHub Pages
     - name: Deploy to GitHub Pages
